# FlashBM25

./: .clang-format  CMakeLists.txt  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_competitors.py  bench_flashbm25.py
docs/: api.rst  conf.py  getting-started.rst  index.rst  performance.rst  requirements.txt
flashbm25/: __init__.py  memory_index.py  parallel.py  tokenizer.py
src/: bindings.cpp  bm25.cpp  bm25.hpp
src/core/: bm25.cpp  bm25.hpp  bm25_variants.cpp  bm25_variants.hpp  bm25f.cpp  bm25f.hpp  simd_scoring.cpp  simd_scoring.hpp  simd_scoring_neon.cpp  simd_scoring_x86_avx2.cpp  simd_scoring_x86_sse42.cpp
src/index/: compressed_index.hpp  inverted_index.cpp  inverted_index.hpp  mmap_index.hpp  postings_list.hpp  streaming_builder.hpp  varint.hpp
src/scoring/: hybrid_rrf.cpp  hybrid_rrf.hpp
src/tokenizer/: stemmer.c  stemmer.h  tokenizer.c  tokenizer.h
tests/: test_bm25.py  test_bm25_properties.py  test_bm25_variants_unit.py  test_integration_trec_msmarco.py  test_memory_index.py  test_parallel_async.py  test_tokenizer_layer.py
tests/fixtures/: trec_ms_marco_pairs.json
