[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

# ── Package metadata ──────────────────────────────────────────────────────────
[project]
name            = "flashbm25"
version         = "0.1.0"
description     = "High-performance BM25 retrieval library built in C++ for Python"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.8"
keywords        = ["bm25", "information-retrieval", "search", "nlp", "ranking", "c++"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
dev   = [
  "pytest>=7",
  "pytest-cov>=5",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "numpy",
  "scipy>=1.10",
]
bench = ["rank_bm25", "numpy", "whoosh", "tantivy", "elasticsearch"]
docs = [
  "sphinx>=7.1",
]
sparse = ["scipy>=1.10"]

[project.urls]
Homepage      = "https://github.com/subhobhai943/FlashBM25"
Repository    = "https://github.com/subhobhai943/FlashBM25"
"Bug Tracker" = "https://github.com/subhobhai943/FlashBM25/issues"

# ── scikit-build-core config ──────────────────────────────────────────────────
[tool.scikit-build]
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = false
wheel.packages = ["flashbm25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["flashbm25"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["flashbm25", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
